[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.0"
env_logger = "0.11"
jsonwebtoken = "9.3"
pingora = { version = "0.3", features = ["lb", "openssl"] }
prometheus = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
